2011-02-19  Allan Saddi  <allan@saddi.com>

	* When deriving PATH_INFO from REQUEST_URI, take SCRIPT_NAME into account.

2011-01-11  Allan Saddi  <allan@saddi.com>

	* Use HTTP status code 500 for error pages. Thanks to
	  Yohann Gabory for pointing out this issue and providing a patch.

2010-10-14  Allan Saddi  <allan@saddi.com>

	* Don't try to restore signal handlers if they weren't installed in
	  the first place.

2010-10-05  Allan Saddi  <allan@saddi.com>

	* Improvements to *_app._getConnection methods suggested by
	  Andrej A Antonov. Thanks!

2009-10-27  Allan Saddi  <allan@saddi.com>

	* Exit gracefully if a thread cannot be started when adding a new
	  job.

2009-10-21  Allan Saddi  <allan@saddi.com>

	* Add configurable timeout (default: no timeout) to be used when the
	  WSGI application is called. Only applies to forked servers!

2009-06-05  Allan Saddi  <allan@saddi.com>

	* Fix bug in scgi servers that occurs when SCRIPT_NAME is missing.
	  Thanks to Jon Nelson for finding the problem!

2009-05-29  Allan Saddi  <allan@saddi.com>

	* Let all the active requests to finish before quitting. Thanks
	  to Anand Chitipothu for the patch!

2009-05-26  Allan Saddi  <allan@saddi.com>

	* Release 1.0.2

2009-05-18  Allan Saddi  <allan@saddi.com>

	* Import Paste factories (and dependencies...) from PasteScript

2009-05-04  Allan Saddi  <allan@saddi.com>

	* Be tolerant of EAGAIN when sending messages to parent process.

2009-02-02  Allan Saddi  <allan@saddi.com>

	* Add forceCGI keyword argument to FastCGI servers to
	  programmatically force CGI behavior.

	* Merge Tommi Virtanen's "single server" (sequential server)
	  patch.

2008-12-03  Allan Saddi  <allan@saddi.com>

	* Update ez_setup.py.

2008-09-26  Allan Saddi  <allan@saddi.com>

	* Re-seed random module after each fork.

2008-09-11  Allan Saddi  <allan@saddi.com>

	* Add an indication as to which header fails assertion when
	  passing in non-string header names and/or values.
