@@ -30,18 +30,26 @@ def aslist(obj, sep=None, strip=True):
 
 def run_ajp_thread(wsgi_app, global_conf,
                    scriptName='', host='localhost', port='8009',
-                   allowedServers='127.0.0.1', debug=NoDefault):
+                   allowedServers='127.0.0.1', debug=NoDefault,
+                   minSpare=None, maxSpare=None, maxThreads=None):
     import flup.server.ajp
     addr = (host, int(port))
     if debug is NoDefault:
         debug = global_conf.get('debug', False)
     debug = asbool(debug)
+    threadpool_args = {}
+    if minSpare is not None:
+        threadpool_args['minSpare'] = int(minSpare)
+    if maxSpare is not None:
+        threadpool_args['maxSpare'] = int(maxSpare)
+    if maxThreads is not None:
+        threadpool_args['maxThreads'] = int(maxThreads)
     s = flup.server.ajp.WSGIServer(
         wsgi_app,
         scriptName=scriptName,
         bindAddress=addr,
         allowedServers=aslist(allowedServers),
-        debug=debug,
+        debug=debug, **threadpool_args
         )
     s.run()
 
@@ -76,7 +84,8 @@ def run_ajp_fork(wsgi_app, global_conf,
 def run_fcgi_thread(wsgi_app, global_conf,
                     host=None, port=None,
                     socket=None, umask=None,
-                    multiplexed=False, debug=NoDefault):
+                    multiplexed=False, debug=NoDefault,
+                    minSpare=None, maxSpare=None, maxThreads=None):
     import flup.server.fcgi
     if socket:
         assert host is None and port is None
@@ -91,11 +100,19 @@ def run_fcgi_thread(wsgi_app, global_conf,
     if debug is NoDefault:
         debug = global_conf.get('debug', False)
     debug = asbool(debug)
+    threadpool_args = {}
+    if minSpare is not None:
+        threadpool_args['minSpare'] = int(minSpare)
+    if maxSpare is not None:
+        threadpool_args['maxSpare'] = int(maxSpare)
+    if maxThreads is not None:
+        threadpool_args['maxThreads'] = int(maxThreads)
     s = flup.server.fcgi.WSGIServer(
         wsgi_app,
         bindAddress=sock, umask=umask,
         multiplexed=asbool(multiplexed),
-        debug=debug)
+        debug=debug, **threadpool_args
+        )
     s.run()
 
 def run_fcgi_fork(wsgi_app, global_conf,
@@ -139,18 +156,26 @@ def run_fcgi_fork(wsgi_app, global_conf,
 def run_scgi_thread(wsgi_app, global_conf,
                     scriptName=NoDefault, host='localhost', port='4000',
                     allowedServers='127.0.0.1',
-                    debug=NoDefault):
+                    debug=NoDefault,
+                    minSpare=None, maxSpare=None, maxThreads=None):
     import flup.server.scgi
     addr = (host, int(port))
     if debug is NoDefault:
         debug = global_conf.get('debug', False)
     debug = asbool(debug)
+    threadpool_args = {}
+    if minSpare is not None:
+        threadpool_args['minSpare'] = int(minSpare)
+    if maxSpare is not None:
+        threadpool_args['maxSpare'] = int(maxSpare)
+    if maxThreads is not None:
+        threadpool_args['maxThreads'] = int(maxThreads)
     s = flup.server.scgi.WSGIServer(
         wsgi_app,
         scriptName=scriptName,
         bindAddress=addr,
         allowedServers=aslist(allowedServers),
-        debug=debug,
+        debug=debug, **threadpool_args
         )
     s.run()
 
